# gaussx

./: .env.example  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: docs-examples.instructions.md
.github/workflows/: ci.yml  codeql.yml  tests-extended.yml  typecheck.yml
CHANGELOG/: index.html
api/: index.html
api/distributions/: index.html
api/gp/: index.html
api/inference/: index.html
api/kernels/: index.html
api/linalg/: index.html
api/operators/: index.html
api/primitives/: index.html
api/quadrature/: index.html
api/reference/: index.html
api/solvers/: index.html
api/ssm/: index.html
architecture/: index.html
design/unified-solvers/: index.html
docs/: architecture.md  index.md  vision.md
docs/api/: distributions.md  gp.md  index.md  inference.md  kernels.md  linalg.md  operators.md  primitives.md  quadrature.md  reference.md  solvers.md  ssm.md
docs/design/: unified-solvers.md
docs/notebooks/: basics.ipynb  basics.py  bayesian_updates.ipynb  bayesian_updates.py  conditional_distributions.ipynb  conditional_distributions.py  differentiating_solve.ipynb  differentiating_solve.py  ensemble_kalman.ipynb  expectation_propagation.ipynb  expectation_propagation.py  exponential_family.ipynb  exponential_family.py  gp_2d_grid.ipynb  gp_2d_grid.py  implicit_kernel.ipynb  implicit_kernel.py  kalman_filter.ipynb  kalman_filter.py  kernel_approximations.ipynb  kernel_regression.ipynb  kernel_regression.py  kronecker_eigen.ipynb  kronecker_eigen.py  love_crossval.ipynb  natural_gradient_vi.ipynb  numpyro_gp.ipynb  numpyro_gp.py  numpyro_precision.ipynb  numpyro_precision.py  operator_zoo.ipynb  operator_zoo.py  parallel_kalman.ipynb  solver_comparison.ipynb  solver_comparison.py  solver_strategies.ipynb  solver_strategies.py  sparse_variational_gp.ipynb  sparse_variational_gp.py  structured_gp.ipynb  (+10 more)
notebooks/: basics.py  bayesian_updates.py  conditional_distributions.py  differentiating_solve.py  ensemble_kalman.py  exponential_family.py  gp_2d_grid.py  implicit_kernel.py  kalman_filter.py  kernel_approximations.py  kernel_regression.py  kronecker_eigen.py  love_crossval.py  natural_gradient_vi.py  numpyro_gp.py  parallel_kalman.py  solver_strategies.py  sparse_variational_gp.py  sugar_ops.py  uncertainty_propagation.py  whitened_svgp.py  woodbury_solve.py
notebooks/basics/: index.html
notebooks/bayesian_updates/: index.html
notebooks/conditional_distributions/: index.html
notebooks/differentiating_solve/: index.html
notebooks/ensemble_kalman/: index.html
notebooks/expectation_propagation/: index.html
notebooks/exponential_family/: index.html
notebooks/gp_2d_grid/: index.html
notebooks/implicit_kernel/: index.html
notebooks/kalman_filter/: index.html
notebooks/kernel_approximations/: index.html
notebooks/kernel_regression/: index.html
notebooks/kronecker_eigen/: index.html
notebooks/love_crossval/: index.html
notebooks/natural_gradient_vi/: index.html
notebooks/numpyro_gp/: index.html
notebooks/numpyro_precision/: index.html
notebooks/operator_zoo/: index.html
notebooks/parallel_kalman/: index.html
notebooks/solver_comparison/: index.html
notebooks/solver_strategies/: index.html
notebooks/sparse_variational_gp/: index.html
notebooks/structured_gp/: index.html
notebooks/sugar_ops/: index.html
notebooks/uncertain_gp_inputs/: index.html
notebooks/uncertainty_propagation/: index.html
notebooks/whitened_svgp/: index.html
notebooks/woodbury_solve/: index.html
search/: search_index.json
src/gaussx/: __init__.py  _einx.py  _solve_frontend.py  _tags.py  _testing.py
tests/: conftest.py  test_docstrings.py  test_import.py  test_tags.py  test_testing.py
tests/distributions/: test_conditional.py  test_gaussian.py  test_joseph.py  test_kl_divergence.py  test_mvn.py  test_mvn_prec.py  test_numpyro_compat.py  test_numpyro_distribution_api.py  test_numpyro_primitives.py  test_project.py
tests/expfam/: test_gaussian.py  test_natural.py  test_parameterizations.py
tests/gp/: test_base_conditional.py  test_collapsed_elbo.py  test_elbo.py  test_interpolation.py  test_kl_divergence.py  test_kronecker_gp.py  test_love.py  test_matheron.py  test_oilmm.py  test_svgp.py  test_svgp_variance.py  test_unwhiten.py
tests/inference/: test_blr.py  test_ensemble.py  test_ensemble_da.py  test_inference.py  test_natural_gradient.py
tests/kernels/: test_eigenpro.py  test_kernel_approx.py
tests/linalg/: test_batched_matvec.py  test_linalg.py  test_lyapunov.py  test_mixed_precision.py  test_schur.py  test_tridiagonal.py  test_woodbury.py
tests/operators/: test_block_diag.py  test_block_tridiag.py  test_capacitance.py  test_implicit_cross_kernel.py  test_implicit_cross_kernel_params.py  test_implicit_kernel.py  test_implicit_kernel_params.py  test_interpolated.py  test_kernel.py  test_kronecker.py  test_kronecker_sum.py  test_lazy_algebra.py  test_low_rank_plus_identity.py  test_low_rank_update.py  test_masked.py  test_sum_kronecker.py  test_svd_low_rank_update.py  test_toeplitz.py
tests/primitives/: test_cholesky.py  test_diag.py  test_inv.py  test_logdet.py  test_quantile.py  test_solve.py  test_sqrt.py  test_stochastic_estimators.py  test_structured_dispatch.py  test_submatrix.py  test_trace.py  test_vmap.py
tests/primitives_extra/: test_eig.py  test_matfree_backends.py  test_root.py  test_svd.py
tests/quadrature/: test_expectations.py  test_gauss_hermite.py  test_gp_predict.py  test_gp_predict_variants.py  test_integrators.py  test_likelihoods.py  test_psi_statistics.py  test_quadrature.py  test_tilted_moments.py  test_types.py  test_unified_ell_elbo.py
tests/recipes/: test_base_conditional.py  test_cvi.py  test_dare.py  test_emission.py  test_ensemble.py  test_infinite_horizon_kalman.py  test_interpolation.py  test_kalman.py  test_kl_divergence.py  test_kronecker_gp.py  test_love.py  (+7 more)
vision/: index.html
(+239 files in other folders)
